# vcs

./: .gitignore  Makefile  README.md  config.template.json  pyproject.toml
.docs/: git-workflow.md
.github/workflows/: release.yml
.scripts/: command.py  git.py  sync.py  sync_bitbucket.py  sync_github.py  sync_gitlab.py
.scripts/clients/: bitbucket_client.py  client.py  configs.py  github_client.py  gitlab_client.py
.scripts/utils/: logger.py
