[project]
name = "vcs"
version = "0.1.0"
description = ""
authors = [
    {name = "akbsit",email = "akbsit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
